# PRATICAEDILIZIA

./: .gitignore  AGGIORNAMENTI.md  GESTIONE-BRANCH-RELEASE.md  GUIDA-UTENTE.md  ISTRUZIONI-AGGIORNAMENTO-VERSIONE.md  ISTRUZIONI-COMPILAZIONE.md  RAPPORTI.HTML  README.md  aggiorna.bat  build-directo.bat  build-finale.bat  build-semplice.bat  build-senza-firma.bat  build.bat  build.ps1  crea-zip-aggiornamenti.bat  download-bootstrap.ps1  firma-aggiornamenti.bat  genera-latest-json.bat  genera-latest-json.ps1  incrementa-versione.bat  incrementa-versione.ps1  latest.json  package.json  pubblica-release-completa.bat  pubblica-release-github.bat
src/: index.html
src-tauri/: Cargo.toml  GUIDA-UTENTE.md  estrai-chiave-pubblica-semplice.ps1  estrai-chiave-pubblica.bat  estrai-chiave-pubblica.ps1  genera-chiavi.bat  genera-chiavi.ps1  tauri.conf.json  tauri.conf.json.new  tauri.conf.json.tmp
src/js/: aggetti.js  app.js  calcoli.js  locale-form.js  models.js  schema-aggetto.js
src/styles/: aggetti.css  main.css  schema-aggetto.css
